# IT_Lobby_20250924

./: .env  .gitignore  .replit  BUILD_EXECUTABLE_GUIDE.md  MYSQL_LOCAL_SETUP_GUIDE.md  SERIAL_TRANSFER_FIXES_LOG.md  api_cascading_dropdowns.py  app.py  build_exe.bat  build_exe.sh  build_exe.spec  check_and_fix_admin.py  current_schema_mysql_20250929_050727.sql  current_schema_mysql_20250929_060050.sql  current_schema_mysql_20250929_071855.sql  current_schema_mysql_20250930_012302.sql  db_dual_support.py  logging_config.py  main.py  models.py  mysql_migration_consolidated_final.py  mysql_migration_consolidated_final.py.backup.20250929_060050  mysql_migration_consolidated_final.py.backup.20250929_071855  mysql_migration_consolidated_final.py.backup.20250929_105225  mysql_serial_transfer_validation_update.py  pyproject.toml  replit.md  req.txt  requirements_exe.txt  routes.py  sap_integration.py  sap_job_worker.py  update_mysql_migration.py
Lic/: generate_keys.py  license_validator.py  make_license.py
attached_assets/: Pasted--DocDate-2025-09-29-DueDate-2025-09-29-CardCode-CardName--1759122216569_1759122216571.txt  Pasted--DocDate-2025-09-29-U-EA-CREATEDBy-admin-U-EA-Approved-admin--1759142986816_1759142986817.txt  Pasted--DocDate-2025-09-29-U-EA-CREATEDBy-admin-U-EA-Approved-admin--1759164732589_1759164732591.txt  Pasted--Pasted-DocDate-2025-09-29-U-EA-CREATEDBy-admin-U-EA-Approved-admin-1759164732589-1759164732591-t-1759164995052_1759164995053.txt  Pasted--div-class-row-mt-4-div-class-col-12-div-class-card--1759190139367_1759190139368.txt  (+12 more)
modules/: main_controller.py
(+30 files in other folders)
