[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator==2.1.0",
    "flask-dance>=7.1.0",
    "flask==3.0.0",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==21.2.0",
    "oauthlib>=3.3.1",
    "psycopg2-binary==2.9.9",
    "pyjwt==2.8.0",
    "flask-login==0.6.3",
    "werkzeug==3.0.1",
    "jinja2==3.1.2",
    "sqlalchemy==2.0.23",
    "requests==2.31.0",
    "urllib3==2.3.0",
    "pyodbc==5.2.0",
    "python-dotenv==1.1.1",
    "mysql-connector-python==9.3.0",
    "pymysql==1.1.1",
    "qrcode[pil]==8.2",
    "pillow==11.2.1",
    "python-barcode==0.15.1",
    "certifi==2025.1.31",
    "markupsafe==3.0.2",
    "alembic==1.16.2",
    "charset-normalizer==3.4.1",
    "wtforms==3.2.1",
    "blinker==1.9.0",
    "click==8.2.0",
    "idna==3.10",
    "colorama==0.4.6",
    "flask-migrate==4.1.0",
    "greenlet==3.2.3",
    "itsdangerous==2.2.0",
    "python-dateutil==2.9.0.post0",
    "flask-wtf==1.2.2",
    "cffi==1.17.1",
    "cryptography==44.0.3",
    "dnspython==2.7.0",
]
